--- a/www/templates/activity-detail.html
+++ b/www/templates/activity-detail.html
@@ -3,8 +3,8 @@
 	
 
 	<ion-content has-header="true">
-		<div class="button-bar">
-		  <a class="button button-block button-balanced  ion-ios7-stopwatch-outline" ng-click="addNewQuarter()"> Round</a>
+		<div class="button-bar" ng-show="true">
+		  <a class="button button-block button-balanced  ion-ios7-stopwatch-outline" ng-click="newQuarter()"> Round</a>
 		  <a class="button button-block button-positive ion-ios7-star-outline"> Winner</a>
 		  <a class="button button-block button-energized ion-ios7-pricetag-outline"> Points</a>
 		</div>
@@ -56,12 +56,8 @@
 					<div class="list card">
 						<div class="row">
 							<div class="col">
-								<h2 ng-click="editor1Enabled=!editor1Enabled">{{quarter.team1score}}</h2>
-								
-								<div ng-show="editor1Enabled">
-									<input type="text" ng-model="quarter.team1score" ng-change="scores.$save(quarter)">
-								</div>
-
+								<h2>{{quarter.team1score}}</h2>
+								<button class="button button-small button-balanced ion-edit" ng-show="true" ng-click="editScore1(quarter)">  Edit</button>
 								<h4>{{activity.team1.schoolId}}</h4>
 							</div>
 						</div>
@@ -72,11 +68,8 @@
 					<div class="list card">
 						<div class="row">
 							<div class="col">
-								<h2 ng-click="editor2Enabled=!editor2Enabled">{{quarter.team2score}}</h2>
-								
-								<div ng-show="editor2Enabled">
-									<input type="text" ng-model="quarter.team2score" ng-change="scores.$save(quarter)">
-								</div>
+								<h2>{{quarter.team2score}}</h2>
+								<button class="button button-small button-balanced ion-edit" ng-show="true" ng-click="editScore2(quarter)">  Edit</button>
 								<h4>{{activity.team2.schoolId}}</h4>
 							</div>
 						</div>
