Selection of winner

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -208,7 +208,7 @@ h1{
   text-align:center;
   padding-bottom: 0%;
 }
-.item-divider {
+.align-center {
   text-align:center;
   padding-bottom: 0%;
 }
