--- a/www/templates/activity-detail.html
+++ b/www/templates/activity-detail.html
@@ -5,48 +5,56 @@
 	<ion-content has-header="true">
 		<div class="button-bar" ng-show="true">
 		  <a class="button button-block button-balanced  ion-ios7-stopwatch-outline" ng-click="newQuarter()"> Round</a>
-		  <a class="button button-block button-positive ion-ios7-star-outline"> Winner</a>
-		  <a class="button button-block button-energized ion-ios7-pricetag-outline"> Points</a>
+		  <a class="button button-block button-positive ion-ios7-star-outline" ng-click="showWinnerModal()"> Winner</a>
+		  <a class="button button-block button-energized ion-ios7-pricetag-outline" ng-click="showPointsModal()"> Champion</a>
 		</div>
 
 		 
 
 			<div class="list">
-				<div class="item item-divider">
-				Final Scores
+
+			
+
+				<div class="item item-divider align-center">
+				Final Score
 				</div>
 
+				<div ng-repeat="quarter in scores | filter : {activityId : activity.$id}">
+				<div ng-show="$last">
+					<div class="row">
 
-				<div class="row">
-
-					<div class="col">
-						<div class="list card">
-							<div class="row">
-								<div class="col">
-									<h1>{{scores[(scores.length)-1].team1score}}</h1>
-									<h3>{{activity.team1.schoolId}}</h3>
+						<div class="col">
+							<div class="list card">
+								<div class="row">
+									<div class="col">
+										<h1>{{quarter.team1score}}</h1>
+										<h3>{{activity.team1.schoolId}}</h3>
+									</div>
 								</div>
 							</div>
 						</div>
-					</div>
-					<br/>	<br/>	<br/>
-					<div class="col">
-						<div class="list card">
-							<div class="row">
-								<div class="col">
-									<h1>{{scores[(scores.length)-1].team2score}}</h1>
-									<h3>{{activity.team2.schoolId}}</h3>
+						<br/>	<br/>	<br/>
+						<div class="col">
+							<div class="list card">
+								<div class="row">
+									<div class="col">
+										<h1>{{quarter.team2score}}</h1>
+										<h3>{{activity.team2.schoolId}}</h3>
+									</div>
 								</div>
 							</div>
 						</div>
+						
 					</div>
-					
+
+				</div>	
 				</div>
+
 			</div>
 
 
 		<div ng-repeat="quarter in scores | filter : {activityId : activity.$id}">
-			<div class="item item-divider">
+			<div class="item item-divider align-center">
 			 {{quarter.name}}
 			</div>
 
@@ -82,4 +90,7 @@
 			
 		
   	</ion-content>
+
+
+  	
 </ion-view>
