--- a/www/templates/event-activity.html
+++ b/www/templates/event-activity.html
@@ -30,12 +30,15 @@
 				ng-repeat="game in games = (activities | filter: {time: time} )" href="#/tab/activity-detail/{{game.$id}}">
 				
 				<i class="icon {{game.gameIcon}}"></i>
-				{{game.team1.schoolId}} vs. {{game.team2.schoolId}} <br/>
+				
+				{{game.teams.team1.schoolId}} vs. {{game.teams.team2.schoolId}}
+				<br/>
+
 				{{game.gameName}}   {{game.category}}
 			 	
 			 	<p>{{game.venue}}, Game #{{game.gameNo}}</p>
 			 	<p> </p>
-				<i class="badge badge-balanced ion-trophy" ng-show="(game.winner).length>0"> &nbsp;Winner : {{game.winner}}</i>
+				<i class="badge badge-balanced ion-trophy" ng-show="!(game.winner=='?')"> &nbsp;Winner : {{game.winner}}</i>
 			</a>
 
 	    
@@ -47,94 +50,5 @@
 
 
   	</ion-content>
-
-  	<script id="newActivityModal.html" type="text/ng-template">
-
-      <div class="modal" ng-controller="ActivityModalCtrl">
-
-        <ion-header-bar class="bar bar-header bar-positive">
-        <button ng-click="hideActivityModal()" class="button button-positive button-icon ion-ios7-arrow-back"></button>
-        <h1 class="title"></h1>
-        <button ng-click="createActivity()" class="button button-positive button-icon ion-ios7-checkmark"></button>
-				
-        
-        </ion-header-bar>
-
-        <ion-content>
-
-            <div class="list">
-
-            		
-            
-            <label class="item item-input item-floating-label">
-  				<span class="input-label">Game Number</span>
-                <input ng-model="newActivity.gameNo" type="text" placeholder="Game Number">
-            </label>
-
-            <label class="item item-icon-right">
-			  <select style="opacity:0; width:100%; position:absolute; z:index=100" 
-			  		ng-model="newActivity.game" ng-options="game.gameName for game in games"></select>
-
-			  <i class="icon ion-ios7-arrow-down"></i>
-			  <span class="input-label">Game Name</span>
-			  <h2>{{newActivity.game.gameName}}</h2>
-
-			</label>
-
-            <label class="item item-input item-floating-label">
-  				<span class="input-label">Category</span>
-                <input ng-model="newActivity.category" type="text" placeholder="Category">
-            </label>
-
-            <label class="item item-icon-right">
-			  <select style="opacity:0; width:100%; position:absolute; z:index=100" 
-			  		ng-model="newActivity.team1" ng-options="school.$id for school in schoolList"></select>
-
-			  <i class="icon ion-ios7-arrow-down"></i>
-			  <span class="input-label">Team 1</span>
-			  <h2>{{newActivity.team1.name}}</h2>
-
-			</label>
-
-			<label class="item item-icon-right">
-			  <select style="opacity:0; width:100%; position:absolute; z:index=100" 
-			  		ng-model="newActivity.team2" ng-options="school.$id for school in schoolList"></select>
-
-			  <i class="icon ion-ios7-arrow-down"></i>
-			  <span class="input-label">Team 2</span>
-			  <h2>{{newActivity.team2.name}}</h2>
-
-			</label>	
-            
-
-            <label class="item item-input item-floating-label">
-  				<span class="input-label">Venue</span>
-                <input ng-model="newActivity.venue" type="text" placeholder="Venue">
-            </label>
-
-            
-            <label class="item item-input item-floating-label" ng-click="openFromTimePicker()">
-            	<span class="input-label">From</span>
-                <input type="text" ng-model="newActivity.formattedFromTime" placeholder="From">
-            </label>
-
-            <label class="item item-input item-floating-label" ng-click="openToTimePicker()">
-            	<span class="input-label">To</span>
-                <input type="text" ng-model="newActivity.formattedToTime" placeholder="To">
-            </label>
-
-  			
-
-            
-
-            </div>
-
-        </ion-content>
-
-      </div>
-
-    </script>
-
-
 
 </ion-view>
