--- a/www/templates/result-detail.html
+++ b/www/templates/result-detail.html
@@ -4,8 +4,32 @@
   The FriendsCtrl pulls data from the Friends service (service.js)
   The Friends service returns an array of friend data
 -->
-<ion-view title="{{friend.name}}">
+<ion-view title="{{school.$id}}">
   <ion-content has-header="true" padding="true">
-  
+
+	 <div id="header">
+	  	<div id="profile-bg" class="{{school.bg}}"></div>
+
+	  	<div id="content">
+
+	  		<div id="profile-info">
+	  			<img id="profile-image" ng-src="img/ionic.png">
+	  			<h3 id="profile-name">{{school.$id}}</h3>
+	  			<span id="profile-description">{{school.name}}</span>
+	  		</div>
+
+	  		<ion-list>
+		  		<ion-item ng-repeat="event in events" class="item item-icon-left item item-icon-right">
+
+			  		<li class="icon ion-ios7-calendar-outline" > </li>
+			  		{{event.title}}
+			  		<p>{{ event.date  | date:'EEEE, MMMM d, y'}}</p>
+					<i class="icon ion-ios7-arrow-right"></i>
+		  		</ion-item>
+	 	 	</ion-list>
+
+		</div>
+	</div>
+
   </ion-content>
 </ion-view>
