--- a/www/templates/modals/add-point-modal.html
+++ b/www/templates/modals/add-point-modal.html
@@ -1,10 +1,10 @@
 
 <div class="modal" ng-controller="PointsModalCtrl">
 	
-	<ion-header-bar class="bar bar-header bar-energized">
+	<ion-header-bar class="bar bar-header bar-light">
 	    <button ng-click="hidePointsModal()" class="button button-positive button-icon ion-ios7-arrow-back">
 	    </button>
-	    <h1 class="title">Select Champion</h1>	
+	    <h1 class="title">Choose Team</h1>	
 	</ion-header-bar>
 
 
@@ -12,8 +12,8 @@
 		
 		<div class="list">
 
-			 <label class="item item-radio" ng-repeat="team in teams" ng-click="addPoints(data.result)">
-			   <input type="radio" name="group" ng-model="data.result" ng-value="team.schoolId" >
+		 <label class="item item-radio" ng-repeat="team in teams" ng-click="showPoints(team.schoolId)">
+			   <input type="radio" name="group" ng-model="team.schoolId" ng-value="team.schoolId" >
 
 				   <a class="item item-icon-left">
 				    	<i class="icon ion-ios7-people"></i>
