--- a/www/templates/modals/add-winner-modal.html
+++ b/www/templates/modals/add-winner-modal.html
@@ -1,10 +1,10 @@
 
 <div class="modal" ng-controller="WinnerModalCtrl">
 	
-	<ion-header-bar class="bar bar-header bar-positive">
+	<ion-header-bar class="bar bar-header bar-light">
 	    <button ng-click="hideWinnerModal()" class="button button-positive button-icon ion-ios7-arrow-back">
 	    </button>
-	    <h1 class="title">Select Winner</h1>	
+	    <h1 class="title">Choose Team</h1>	
 	</ion-header-bar>
 
 
