--- a/www/templates/result-detail.html
+++ b/www/templates/result-detail.html
@@ -18,15 +18,20 @@
 	  			<span id="profile-description">{{school.name}}</span>
 	  		</div>
 
-	  		<ion-list>
-		  		<ion-item ng-repeat="event in events" class="item item-icon-left item item-icon-right">
+	  		<div class="list">
+		  		<a 	ng-repeat="point in points | filter : {schoolId : school.$id}" 
+		  					class="item item-icon-left item item-icon-right"
+		  					href="#/tab/activity-detail/{{point.activityId}}">
 
-			  		<li class="icon ion-ios7-calendar-outline" > </li>
-			  		{{event.title}}
-			  		<p>{{ event.date  | date:'EEEE, MMMM d, y'}}</p>
-					<i class="icon ion-ios7-arrow-right"></i>
-		  		</ion-item>
-	 	 	</ion-list>
+			  		<i class="icon {{getIcon(point.activityId)}}"></i>
+
+			  		{{getTeams(point.activityId)}}
+			  		<br/>
+			  		{{getGameName(point.activityId)}}  {{getCategory(point.activityId)}}
+			  		<p>{{getVenue(point.activityId)}}, {{getGameNo(point.activityId)}}</p>
+			  		<span class="badge badge-balanced">+ {{point.points}} Pts</span>
+		  		</a>
+	 	 	</div class="list">
 
 		</div>
 	</div>
