--- a/platforms/android/assets/www/templates/modals/choose-position-modal.html
+++ b/platforms/android/assets/www/templates/modals/choose-position-modal.html
@@ -1,7 +1,7 @@
 
 <div class="modal" ng-controller="PositionModalCtrl">
 	
-	<ion-header-bar class="bar bar-header bar-light">
+	<ion-header-bar class="bar bar-header bar-positive">
 	    <button ng-click="hidePositionModal()" class="button button-positive button-icon ion-ios7-arrow-back">
 	    </button>
 	    <h1 class="title">Choose Position</h1>	
