--- a/platforms/android/assets/www/templates/tab-about.html
+++ b/platforms/android/assets/www/templates/tab-about.html
@@ -21,20 +21,19 @@
 
 	  	<div id="content">
 	  		<div id="profile-info">
-	  			<img id="profile-image" ng-src="img/jp3.jpg">
-	  			<h3 id="profile-name">John Anthony Pecson</h3>
-	  			<span id="profile-description">The creator of Prisaack Scores </span>
+	  			<img id="profile-image" ng-src="img/prisaacck.png">
+	  			<h3 id="profile-name">Prisaack Scores</h3>
+	  			<span id="profile-description">Experience Prisaack right in you mobile</span>
 	  		</div>
 		</div>
 
 		<div class="container align-center">
 				<br>
-				<h4><p id="font-muli" align="center">Hello, my name is John Anthony</p></h4>
-				<h5><p id="font-muli" align="justify">I am a Computer Science student from KCC. I’ve started learning to write software since 2010, and as the time passed, experience allowed me to craft my skills. I maintain a healthy balance between functionality and visual impact in all my work as I really believe that every piece of design can be a work of art.</p></h5>
+				
 
 				<h5><p id="font-muli" align="justify">This app is intended to be used for Prisaack Meet 2014, it features viewing of actual event schedules, live scoring updates and current school standings.</p></h5>
 
-				<h5><p id="font-muli" align="justify">This app is made possible through the support of the whole KCC Community, it is intended to help make the dissemination of information during Prisaack Meet become easily accessible to anyone, anytime, anywhere.</p></h5>
+				<h5><p id="font-muli" align="justify">This app is made possible through the support of the whole KCC Community, it is intended to effectively disseminate information during Prisaack Meet.
 
 				<h5><p id="font-muli" align="justify">If you found some bugs or any issues, you can help me fix it by leaving your
 				<a href=""ng-click="feedback()">feedbacks, comments or suggestions.</a>
