--- a/platforms/android/assets/www/css/style.css
+++ b/platforms/android/assets/www/css/style.css
@@ -218,7 +218,7 @@ h1{
 /******************/
 
 .bg-jp{
-  background: url('../img/nepal.jpg') no-repeat transparent;
+  background: url('../img/prisaacck cover_2.jpg') no-repeat transparent;
 }
 .bg-fbc{
   background: url('../img/6.jpg') no-repeat transparent;
@@ -278,14 +278,19 @@ h1{
   color: #888;
 }
 
+.circle {
+  border-radius: 100px;
+}
+
 #profile-image {
   display: block;
-  border-radius: 100px;
+  /*border-radius: 100px;*/
   border: 1px solid #fff;
   width: 128px;
   height: 128px;
   margin: 30px auto 0;
   box-shadow: 0px 0px 4px rgba(0,0,0,0.7);
+  /*background-color: white;*/
 }
 
       
