--- a/www/templates/tab-about.html
+++ b/www/templates/tab-about.html
@@ -21,20 +21,41 @@
 
 	  	<div id="content">
 	  		<div id="profile-info">
-	  			<img id="profile-image" ng-src="img/jp3.jpg">
-	  			<h3 id="profile-name">John Anthony Pecson</h3>
-	  			<span id="profile-description">The creator of Prisaack Scores </span>
+	  			<img id="profile-image" ng-src="img/prisaacck.png">
+	  			<h3 id="profile-name">Prisaack Scores</h3>
+	  			<span id="profile-description">The official app for PRISAACK MEET 2014</span>
 	  		</div>
 		</div>
 
 		<div class="container align-center">
 				<br>
-				<h4><p id="font-muli" align="center">Hello, my name is John Anthony</p></h4>
-				<h5><p id="font-muli" align="justify">I am a Computer Science student from KCC. I’ve started learning to write software since 2010, and as the time passed, experience allowed me to craft my skills. I maintain a healthy balance between functionality and visual impact in all my work as I really believe that every piece of design can be a work of art.</p></h5>
+				
 
 				<h5><p id="font-muli" align="justify">This app is intended to be used for Prisaack Meet 2014, it features viewing of actual event schedules, live scoring updates and current school standings.</p></h5>
 
-				<h5><p id="font-muli" align="justify">This app is made possible through the support of the whole KCC Community, it is intended to help make the dissemination of information during Prisaack Meet become easily accessible to anyone, anytime, anywhere.</p></h5>
+				<br/>	
+
+				<h5><p id="font-muli" align="justify">The PRISAACK Officers and Kabankalan Catholic College, the host school, would like to express their heartfelt thanks to:</p></h5>
+
+				<h5><p id="font-muli" align="justify">our Lord God Almighty for making all things possible;</p></h5>
+
+				<h5><p id="font-muli" align="justify">all teachers/trainers and coaches for imparting valuable insights and courage;</p></h5>
+
+				<h5><p id="font-muli" align="justify">the atletes/participants and students for their hard work and patience for striving in perfecting their crafts;</p></h5>
+
+				<h5><p id="font-muli" align="justify">the parents for their trust and unwavering support;</p></h5>
+
+				<h5><p id="font-muli" align="justify">all the working committees, for their unselfish and valuable service for the success of this year's program;</p></h5>
+
+				<h5><p id="font-muli" align="justify">the PRISAACK member schools, TACEA, FC, FBC and the host school KCC for the untiring support and motivation;</p></h5>
+
+				<h5><p id="font-muli" align="justify">all those who in oney way or another have greatly contributed to the success of the PRISAACK MEET 2014</p></h5>
+
+				<br/>
+
+				<h5><p id="font-muli" align="justify">This project is made possible through the support of the whole KCC Community.</p></h5>
+
+				<br/>
 
 				<h5><p id="font-muli" align="justify">If you found some bugs or any issues, you can help me fix it by leaving your
 				<a href=""ng-click="feedback()">feedbacks, comments or suggestions.</a>
